save additional info to JSON