@@ -1,7 +1,8 @@
 package de.uniba.dsg.serverless.profiling.model;
 
 import com.github.dockerjava.api.command.InspectContainerResponse;
-import de.uniba.dsg.serverless.profiling.util.MetricsUtil;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import org.apache.commons.lang.StringUtils;
 
 import java.io.IOException;
@@ -42,21 +43,35 @@ public class Profile {
         }
     }
 
-    public void save() throws ProfilingException {
+    public Path save(Path folder1) throws ProfilingException {
+        Path folder = getUniqueFolderName();
+        try {
+            Files.createDirectories(folder);
+            saveCSV(folder);
+            saveAdditionalInformation(folder);
+            return folder;
+        } catch (IOException e) {
+            throw new ProfilingException(e);
+        }
+    }
+
+    private void saveCSV(Path folder) throws IOException {
         List<String> lines = new ArrayList<>();
-        lines.add(toString());
-        lines.add(getHeader());
-        lines.add(getEmptyMetrics());
+        lines.add(toString());          // python doesn't read first line (TODO -> python)
+        lines.add(getHeader());         // header
+        lines.add(getEmptyMetrics());   // adds empty metrics with (<start time>,0,0,..)
         for (Metrics m : metrics) {
             lines.add(m.toString());
         }
-        Path path = OUTPUT_FOLDER.resolve(getUniqueFileName());
-        try {
-            Files.createDirectories(OUTPUT_FOLDER);
-            Files.write(path, lines);
-        } catch (IOException e) {
-            throw new ProfilingException("Could not write to " + path, e);
-        }
+        Files.write(folder.resolve("metrics.csv"), lines);
+    }
+
+    private void saveAdditionalInformation(Path folder) throws IOException {
+        Gson jsonParser = new GsonBuilder()
+                .setPrettyPrinting()
+                .create();
+        ProfileMetaInfo info = new ProfileMetaInfo(additional);
+        Files.writeString(folder.resolve("meta.json"), jsonParser.toJson(info));
     }
 
     private String getHeader() {
@@ -70,9 +85,10 @@ public class Profile {
         return additional.getState().getStartedAt() + StringUtils.repeat(",0", metrics.get(0).relevantMetrics.size());
     }
 
-    private String getUniqueFileName() {
+    private Path getUniqueFolderName() {
+        // TODO replace by general name
         String started = this.started.format(DateTimeFormatter.ISO_LOCAL_DATE_TIME);
-        return "Profile " + started + ".csv";
+        return OUTPUT_FOLDER.resolve("Profile " + started);
     }
 
     private void validateProfile(InspectContainerResponse additional) throws ProfilingException {
